Fix code block overflow

--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -35,22 +35,24 @@ body
 
 .remark-code-container
     margin: 1rem 0rem
+    overflow: scroll
 
 .remark-code-title 
-    background-color: vars.$color-tertiary !important
-    color: white
+    background-color: vars.$color-tertiary
     padding: 0.2rem 0.5rem
     border-radius: 0.5rem 0.5rem 0rem 0rem
-
-pre
-    &:has(code)
-        border-radius: 0.5rem
-        padding: 0.7rem 1rem
-        margin: 1rem 0rem
 
 .remark-code-title + pre
     border-radius: 0rem 0rem 0.5rem 0.5rem
     margin: 0rem 0rem
+
+pre
+    overflow: auto !important
+
+    &:has(code)
+        border-radius: 0.5rem
+        padding: 0.7rem 1rem
+        margin: 1rem 0rem
 
 // code[class*="language-"], pre[class*="language-"]
 pre > code
@@ -73,7 +75,7 @@ pre > code
     -moz-hyphens: none
     -ms-hyphens: none
     hyphens: none
-
+    
 // pre[class*="language-"]
 //     padding: 1em
 //     margin: .5em 0
